Stylus/spotify.com/Larger Progress Bar.user.css
/* ==UserStyle==
@name           Larger Progress Bar
@namespace      github.com/openstyles/stylus
@version        1.0
@description    Positions the progress bar above the control bar and scales it with the page width
@author         Neopolitan#0002 (https://discord.com/users/427114049487241227)
@homepageURL    https://github.com/Neop0litan/CSS-Tweaks
==/UserStyle== */

@-moz-document domain("open.spotify.com") {
    .playback-bar {
        position: absolute;
        margin-bottom: 128px;
        background: #181818;
        padding: 10px 0 8px 0;
        outline: 1px solid #282828;
    }
    
    .NoOAOv6U6vtqj_ybS1Cd {
        margin-top: -1px;
    }
    
    .GD2gbRtcs5dOjMGAM_Y4 {
        border: none;
    }
}

